--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ section .topo-do-site .flex{
 .topo-do-site .txt-topo-site p{
     color: #fff;
     margin: 40px 0;
+    font-size: 16px;
 }
 
 .topo-do-site .img-topo-site img{
@@ -352,6 +353,13 @@ form textarea{
     max-height: 400px;
 }
 
+.formulario .interface p{
+    color: white;
+    margin-top: 10px;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
 form .btn-enviar{
     margin-top: 20px;
     text-align: center;
@@ -383,6 +391,10 @@ footer .line-footer{
 
 .borda{
     border-top: 2px solid #A020F0;
+}
+
+footer .line-footer p{
+    color: white;
 }
 
 footer .line-footer p i{
