--- a/style.css
+++ b/style.css
@@ -1,29 +1,32 @@
 /* ESTILO GERAL*/
+html {
+    font-size: 17px;
+}
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Audiowide", sans-serif;
-    font-weight: 400;
+    font-weight: 450;
     font-style: normal;
 }
 
-body{
+body {
     background-color: black;
     height: 100vh;
 }
 
-.interface{
+.interface {
     max-width: 1280px;
     margin: 0 auto;
 }
 
-.flex{
+.flex {
     display: flex;
 }
 
-.btn-contato button{
+.btn-contato button {
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 700;
@@ -34,62 +37,63 @@ body{
     transition: .2s;
 }
 
-h2.titulo{
+h2.titulo {
     color: white;
     font-size: 38px;
     text-align: center;
 }
 
-h2.titulo span{
+h2.titulo span {
     color: #A020F0;
 }
 
-button:hover, form .btn-enviar input:hover{
+button:hover,
+form .btn-enviar input:hover {
     box-shadow: 0px 0px 8px #a020f0e7;
     transform: scale(1.05);
 }
 
 /* ESTILO DO CABEÇALHO */
 
-header{
-    padding: 40px 4%;  
+header {
+    padding: 40px 4%;
 }
 
-header > .interface{
+header>.interface {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header a{
+header a {
     color: #a0a0a0;
     text-decoration: none;
     display: inline-block;
     transition: .2s;
 }
 
-header nav.menu-desktop a:hover{
+header nav.menu-desktop a:hover {
     color: white;
     transform: scale(1.15);
 }
 
-header nav.menu-desktop ul{
+header nav.menu-desktop ul {
     list-style-type: none;
 }
 
-header nav.menu-desktop ul li{
+header nav.menu-desktop ul li {
     display: inline-block;
     padding: 0 40px;
 }
 
 /* ESTILO DO MENU MOBILE */
 
-.btn-abrir-menu i{
-    color:#A020F0;
+.btn-abrir-menu i {
+    color: #A020F0;
     font-size: 40px;
 }
 
-.menu-mobile{
+.menu-mobile {
     background-color: rgba(0, 0, 0, 0.925);
     height: 100vh;
     position: fixed;
@@ -101,20 +105,20 @@ header nav.menu-desktop ul li{
     transition: .4s;
 }
 
-.menu-mobile.abrir-menu{
+.menu-mobile.abrir-menu {
     width: 70%;
     transition: .4s;
 }
 
-.menu-mobile.abrir-menu ~ .overlay-menu{
+.menu-mobile.abrir-menu~.overlay-menu {
     display: block;
 }
 
-.menu-mobile nav ul{
+.menu-mobile nav ul {
     text-align: right;
 }
 
-.menu-mobile nav ul li a{
+.menu-mobile nav ul li a {
     color: white;
     font-size: 20px;
     font-weight: 300;
@@ -122,21 +126,21 @@ header nav.menu-desktop ul li{
     display: block;
 }
 
-.menu-mobile nav ul li a:hover{
+.menu-mobile nav ul li a:hover {
     background-color: #a020f0a8;
     color: #000;
 }
 
-.menu-mobile .btn-fechar{
+.menu-mobile .btn-fechar {
     padding: 20px 5%;
 }
 
-.menu-mobile .btn-fechar i{
+.menu-mobile .btn-fechar i {
     color: #A020F0;
     font-size: 35px;
 }
 
-.overlay-menu{
+.overlay-menu {
     background-color: #0808089a;
     width: 100%;
     height: 100%;
@@ -149,112 +153,127 @@ header nav.menu-desktop ul li{
 
 /* ESTILO DO TOPO DO SITE */
 
-section .topo-do-site{
-    padding: 40px 4%;
+section.topo-do-site {
+    padding: 15px 4%;
+    background-color: #000;
+    min-height: auto;
 }
 
-section .topo-do-site .flex{
+.topo-do-site .flex {
+    display: flex;
     align-items: center;
     justify-content: center;
-    gap: 90px;
+    flex-wrap: wrap;
+    gap: 50px;
+    min-height: auto;
 }
 
-.topo-do-site h1{
-    color: white;
-    font-size: 42px;
-    line-height: 40px;
+.topo-do-site .txt-topo-site {
+    max-width: 900px;
+    text-align: center;
+    width: 100%;
 }
 
-.topo-do-site .txt-topo-site h1 span{
+.topo-do-site h1 {
+    font-size: 40px;
+    line-height: 42px;
+    margin-bottom: 15px;
+    color: #fff;
+}
+
+.topo-do-site .txt-topo-site h1 span {
     color: #A020F0;
 }
 
-.topo-do-site .txt-topo-site p{
-    color: #fff;
-    margin: 40px 0;
+.topo-do-site .txt-topo-site p {
+    margin: 12px 0;
     font-size: 16px;
+    color: #fff;
 }
 
-.topo-do-site .img-topo-site img{
-    position: relative;
-    animation: flutuar 2.5s ease-in-out infinite alternate;
-}
-
-@keyframes flutuar{
-    0%{
+@keyframes flutuar {
+    0% {
         top: 0;
     }
 
-    100%{
+    100% {
         top: 20px;
     }
 }
 
 /* ESTILO DAS ESPECIALIDADES */
 
-section.dominios{
+section.dominios {
     padding: 40px 4%;
 }
 
-section.dominios .flex{
+section.dominios .flex {
     gap: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
 }
 
-.dominios .dominios-box{
+.dominios .dominios-box {
     color: white;
     padding: 40px;
     margin-top: 45px;
     border-radius: 20px;
     transition: .2s;
+    flex: 1 1 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
-.dominios .dominios-box:hover{
+.dominios .dominios-box:hover {
     transform: scale(1.05);
 }
 
-.dominios .dominios-box i{
+.dominios .dominios-box i {
     font-size: 70px;
 }
 
 
-.dominios .dominios-box h3{
+.dominios .dominios-box h3 {
     font-size: 28px;
     margin: 15px 0;
 }
 
 /* ESTILO DO SOBRE */
 
-section.sobre{
+section.sobre {
     padding: 80px 4%;
     box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.123);
 }
 
-section.sobre .flex{
+section.sobre .flex {
     align-items: center;
     gap: 60px;
 }
 
-.sobre .txt-sobre{
+.sobre .txt-sobre {
     color: white;
 }
 
-.sobre .txt-sobre h2{
+.sobre .txt-sobre h2 {
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 30px;
 }
 
-.sobre .txt-sobre h2 span{
+.sobre .txt-sobre h2 span {
     color: #A020F0;
     display: block;
 }
 
-.sobre .txt-sobre p{
+.sobre .txt-sobre p {
     margin: 20px 0;
     text-align: justify;
 }
 
-.btn-social button{
+.btn-social button {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -268,61 +287,62 @@ section.sobre .flex{
 
 /* ESTILO DOS PROJETOS */
 
-section.projetos{
+section.projetos {
     padding: 80px 4%;
     box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.123);
 }
 
-section.projetos .flex{
+section.projetos .flex {
     justify-content: space-around;
     margin-top: 60px;
 }
 
-.img-proj{
+.img-proj {
     width: 360px;
     height: 460px;
     background-color: #A020F0;
     background-size: cover;
     background-position: 100% 0%;
-    transition: .8s; /* depende do tamanho da imagem*/
+    transition: 3s;
+    /* depende do tamanho da imagem*/
     cursor: pointer;
     border-radius: 40px;
     position: relative;
 }
 
-.img-proj:hover{
+.img-proj:hover {
     background-position: 100% 100%;
 }
 
-.overlay{
-    position: absolute; 
+.overlay {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.377);
-    border-radius: 40px;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
     font-weight: 600;
-    color: white;
+    color: rgb(0, 0, 0);
     opacity: 0;
     transition: .5s;
 }
 
-.overlay:hover{
+.overlay:hover {
     opacity: 1;
 }
 
 /* ESTILO DO FORMULARIO */
 
-section.formulario{
+section.formulario {
     padding: 80px 4%;
 }
 
-form{
+form {
     max-width: 500px;
     margin: 0 auto;
     display: flex;
@@ -332,7 +352,8 @@ form{
     margin-top: 40px;
 }
 
-form input, form textarea{
+form input,
+form textarea {
     width: 100%;
     background-color: rgba(75, 75, 75, 0.555);
     border: 0;
@@ -348,24 +369,24 @@ form input, form textarea{
     CASO QUEIRA MUDAR A COR DO PLACEHOLDER
 } */
 
-form textarea{
+form textarea {
     resize: none;
     max-height: 400px;
 }
 
-.formulario .interface p{
+.formulario .interface p {
     color: white;
     margin-top: 10px;
     font-size: 1.1rem;
     text-align: center;
 }
 
-form .btn-enviar{
+form .btn-enviar {
     margin-top: 20px;
     text-align: center;
 }
 
-form .btn-enviar input{
+form .btn-enviar input {
     width: 120px;
     background-color: #A020F0;
     color: black;
@@ -376,125 +397,126 @@ form .btn-enviar input{
 
 /* ESTILO DO RODAPÉ */
 
-footer{
+footer {
     padding: 40px 4%;
     box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.123);
 }
 
-footer .flex{
+footer .flex {
     justify-content: space-between;
 }
 
-footer .line-footer{
+footer .line-footer {
     padding: 20px 0;
 }
 
-.borda{
+.borda {
     border-top: 2px solid #A020F0;
 }
 
-footer .line-footer p{
+footer .line-footer p {
     color: white;
 }
 
-footer .line-footer p i{
+footer .line-footer p i {
     color: #A020F0;
     font-size: 22px;
 }
 
-footer .line-footer p a{
+footer .line-footer p a {
     color: white;
 }
 
-@media screen and (max-width: 766px){
-    
+@media screen and (max-width: 766px) {
+
     /* CLASSES GERAIS */
 
-    .flex{
+    .flex {
         flex-direction: column;
     }
 
-    h2.titulo{
+    h2.titulo {
         font-size: 34px;
         line-height: 30px;
     }
 
-    .topo-do-site .flex{
+    .topo-do-site .flex {
         flex-direction: column-reverse;
     }
 
     /* CABEÇALHO */
-    .menu-desktop, .btn-contato{
+    .menu-desktop,
+    .btn-contato {
         display: none;
     }
 
     /* TOPO DO SITE */
-    section .topo-do-site .flex{
+    section .topo-do-site .flex {
         align-items: center;
         justify-content: center;
         gap: 100px;
     }
-    
-    section.topo-do-site{
+
+    section.topo-do-site {
         padding: 5px 4%;
     }
-    
-    .topo-do-site h1{
+
+    .topo-do-site h1 {
         font-size: 35px;
     }
 
-    .topo-do-site .img-topo-site img{
+    .topo-do-site .img-topo-site img {
         width: 100%;
     }
 
-    section.dominios{
+    section.dominios {
         padding: 40px 8%;
     }
 
     /* SOBRE */
 
-    section.sobre{
+    section.sobre {
         padding: 80px 8%;
     }
 
-    .sobre .txt-sobre h2{
+    .sobre .txt-sobre h2 {
         font-size: 35px;
         line-height: 35px;
         text-align: center;
     }
 
-    .btn-social{
+    .btn-social {
         text-align: center;
     }
 
-    .img-sobre img{
+    .img-sobre img {
         width: 100%;
     }
 
     /* PORTFOLIO */
-    section.projetos{
+    section.projetos {
         padding: 80px 8%;
     }
 
-    .img-proj{
+    .img-proj {
         width: 100%;
         max-width: 360px;
         margin: 0 auto;
 
     }
 
-    section.projetos .flex{
+    section.projetos .flex {
         gap: 60px;
     }
 
     /* RODAPE */
 
-    footer .flex{
+    footer .flex {
         flex-direction: column;
         gap: 30px;
     }
 
-    footer .line-footer{
+    footer .line-footer {
         text-align: center;
     }
 }
